--- a/AYS/package.json
+++ b/AYS/package.json
@@ -21,6 +21,16 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@progress/kendo-angular-buttons": "^4.1.2",
+    "@progress/kendo-angular-dateinputs": "^3.4.4",
+    "@progress/kendo-angular-dropdowns": "^3.0.2",
+    "@progress/kendo-angular-excel-export": "^2.1.1",
+    "@progress/kendo-angular-grid": "^3.5.1",
+    "@progress/kendo-angular-inputs": "^3.2.0",
+    "@progress/kendo-angular-intl": "^1.4.1",
+    "@progress/kendo-angular-l10n": "^1.2.0",
+    "@progress/kendo-data-query": "^1.4.0",
+    "@progress/kendo-drawing": "^1.5.6",
     "angularfire2": "^5.0.0-rc.3",
     "core-js": "^2.4.1",
     "firebase": "^4.6.1",
